--- a/demo/index.html
+++ b/demo/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Animated brackets</title>
 
+    <meta name="description" content="Animated brackets">
+    <meta name="keywords" content="svg responsive jQuery plugin Greensock Gsap animation">
+
     <link rel="stylesheet" href="style.css">
 
 
