--- a/demo/index.html
+++ b/demo/index.html
@@ -6,7 +6,7 @@
     <title>Animated brackets</title>
 
     <meta name="description" content="Animated brackets">
-    <meta name="keywords" content="svg responsive jQuery plugin Greensock Gsap animation">
+    <meta name="keywords" content="svg draw responsive jQuery plugin Greensock Gsap animation">
 
     <link rel="stylesheet" href="style.css">
 
