duration 0, for prevent animation

--- a/demo/index.html
+++ b/demo/index.html
@@ -132,7 +132,9 @@
         color: '#cacaca'
     });
 
-    $('.section-features .feature-item:nth-child(2) .title').animatedBrackets();
+    $('.section-features .feature-item:nth-child(2) .title').animatedBrackets({
+        duration: 0
+    });
 
     $('.section-features .feature-item:nth-child(3) .title').animatedBrackets({
         points: [
